docs/install_azure_flatcar/k3s/nginx-onlyedge.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: kubeedge
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
      hostPort: 80
  nodeSelector:
    "node-role.kubernetes.io/edge": ""
