docs/install_azure_flatcar/k3s/traefik-ingress-route-tcp2.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: cloudcore-tcp2-ingress
  namespace: kubeedge
spec:
  entryPoints:
    - tcp2
  routes:
    - match: HostSNI(`*`)
      services:
        - name: cloudcore
          port: 10002
