docs/install_azure_flatcar/k3s/traefik-ingress-route-tcp3.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: cloudcore-tcp3-ingress
  namespace: kubeedge
spec:
  entryPoints:
    - tcp3
  routes:
    - match: HostSNI(`*`)
      services:
        - name: cloudcore
          port: 10003
